Página index.html estilizada

--- a/src/main/resources/templates/forrageira/form.html
+++ b/src/main/resources/templates/forrageira/form.html
@@ -6,74 +6,100 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-	<h1 layout:fragment="header">
-		Cadastro de forrageira<small>Este formulário precisa ser
-			preenchido por completo e com informações corretas, em caso de
-			informação errada ou erro no cadastro, por favor, entrar em contato
-			através do e-mail: zeduardu@academico.ufs.br</small>
-	</h1>
-	<div layout:fragment="content" class="container">
+	<div layout:fragment="content" class="container pt-5 form">
+		<h2>Cadastro de forrageira</h2>
+		<p>Este formulário precisa ser preenchido por completo e com
+			informações corretas, em caso de informação errada ou erro no
+			cadastro, por favor, entrar em contato através do e-mail:
+			zeduardu@academico.ufs.br</p>
 		<div>
-			<form class="row g-3" id="forrageiraForm" th:action="@{/forrageiras/(form)}" th:object="${forrageira}" action="#" method="post">
+			<form class="row g-3" id="forrageiraForm"
+				th:action="@{/forrageiras/(form)}" th:object="${forrageira}"
+				action="#" method="post">
 				<input type="hidden" id="inputId" th:field="*{id}">
 				<div class="col-md-4">
-					<label for="inputNomeCientifico" class="form-label">Nome científico</label>
-					<input type="text" id="inputNomeCientifico" th:field="*{nomeCientifico}" th:class="${#fields.hasErrors('nomeCientifico')} ? 'form-control is-invalid' : 'form-control'">
-					<div th:class="${#fields.hasErrors('nomeCientifico')} ? 'invalid-feedback'" th:errors="*{nomeCientifico}"></div>
+					<label for="inputNomeCientifico" class="form-label">Nome
+						científico</label> <input type="text" id="inputNomeCientifico"
+						th:field="*{nomeCientifico}"
+						th:class="${#fields.hasErrors('nomeCientifico')} ? 'form-control is-invalid' : 'form-control'">
+					<div
+						th:class="${#fields.hasErrors('nomeCientifico')} ? 'invalid-feedback'"
+						th:errors="*{nomeCientifico}"></div>
 				</div>
 				<div class="col-md-4">
-					<label for="inputNomeComum" class="form-label">Nome Comum</label>
-					<input type="text" class="form-control" id="inputNomeComum" th:field="*{nomeComum}" th:class="${#fields.hasErrors('nomeComum')} ? 'form-control is-invalid' : 'form-control'">
-					<div th:class="${#fields.hasErrors('nomeCientifico')} ? 'invalid-feedback'" th:errors="*{nomeComum}"></div>
+					<label for="inputNomeComum" class="form-label">Nome Comum</label> <input
+						type="text" class="form-control" id="inputNomeComum"
+						th:field="*{nomeComum}"
+						th:class="${#fields.hasErrors('nomeComum')} ? 'form-control is-invalid' : 'form-control'">
+					<div
+						th:class="${#fields.hasErrors('nomeCientifico')} ? 'invalid-feedback'"
+						th:errors="*{nomeComum}"></div>
 				</div>
 				<div class="col-md-4">
-					<label for="inputGenero" class="form-label">Gênero</label>
-					<input type="text" class="form-control" id="inputGenero" th:field="*{genero}" th:class="${#fields.hasErrors('genero')} ? 'form-control is-invalid' : 'form-control'">
-					<div th:class="${#fields.hasErrors('nomeCientifico')} ? 'invalid-feedback'" th:errors="*{genero}"></div>
+					<label for="inputGenero" class="form-label">Gênero</label> <input
+						type="text" class="form-control" id="inputGenero"
+						th:field="*{genero}"
+						th:class="${#fields.hasErrors('genero')} ? 'form-control is-invalid' : 'form-control'">
+					<div
+						th:class="${#fields.hasErrors('nomeCientifico')} ? 'invalid-feedback'"
+						th:errors="*{genero}"></div>
 				</div>
 				<div class="col-md-4">
-					<label for="inputOrigem" class="form-label">Origem</label> 
-					<input type="text" class="form-control" id="inputOrigem" th:field="*{origem}" th:class="${#fields.hasErrors('origem')} ? 'form-control is-invalid' : 'form-control'">
-					<div th:class="${#fields.hasErrors('nomeCientifico')} ? 'invalid-feedback'" th:errors="*{origem}"></div>
+					<label for="inputOrigem" class="form-label">Origem</label> <input
+						type="text" class="form-control" id="inputOrigem"
+						th:field="*{origem}"
+						th:class="${#fields.hasErrors('origem')} ? 'form-control is-invalid' : 'form-control'">
+					<div
+						th:class="${#fields.hasErrors('nomeCientifico')} ? 'invalid-feedback'"
+						th:errors="*{origem}"></div>
 				</div>
 				<div class="col-md-4">
-					<label for="inputFertilidade" class="form-label">Exigência de fertilidade:</label>
-					<select id="inputFertilidade" class="form-select" th:field="*{exigenciaFertilidade}">
+					<label for="inputFertilidade" class="form-label">Exigência
+						de fertilidade:</label> <select id="inputFertilidade" class="form-select"
+						th:field="*{exigenciaFertilidade}">
 						<option th:value="1" th:text="Alta"></option>
 						<option th:value="2" th:text="Média"></option>
 						<option th:value="3" th:text="Baixa"></option>
 					</select>
 				</div>
 				<div class="col-md-4">
-					<label for="inputPrecipitacao" class="form-label">Precipitição mínima (mm)</label>
-					<input type="text" id="inputPrecipitacao" th:field="*{precipiticaoMinima}" th:class="${#fields.hasErrors('precipiticaoMinima')} ? 'form-control is-invalid' : 'form-control'">
-					<div th:class="${#fields.hasErrors('nomeCientifico')} ? 'invalid-feedback'" th:errors="*{precipiticaoMinima}"></div>
+					<label for="inputPrecipitacao" class="form-label">Precipitição
+						mínima (mm)</label> <input type="text" id="inputPrecipitacao"
+						th:field="*{precipiticaoMinima}"
+						th:class="${#fields.hasErrors('precipiticaoMinima')} ? 'form-control is-invalid' : 'form-control'">
+					<div
+						th:class="${#fields.hasErrors('nomeCientifico')} ? 'invalid-feedback'"
+						th:errors="*{precipiticaoMinima}"></div>
 				</div>
 				<div class="col-md-4">
-					<label for="inputAlagamento" class="form-label">Tolerância ao alagamento:</label>
-					<select id="inputAlagamento" class="form-select" th:field="*{toleranciaAlagamento}">
+					<label for="inputAlagamento" class="form-label">Tolerância
+						ao alagamento:</label> <select id="inputAlagamento" class="form-select"
+						th:field="*{toleranciaAlagamento}">
 						<option th:value="1" th:text="Sim"></option>
 						<option th:value="0" th:text="Não"></option>
 					</select>
 				</div>
 				<div class="col-md-4">
-					<label for="inputToleranciaSeca" class="form-label">Tolerância a seca:</label>
-					<select id="inputToleranciaSeca" class="form-select" th:field="*{toleranciaSeca}">
+					<label for="inputToleranciaSeca" class="form-label">Tolerância
+						a seca:</label> <select id="inputToleranciaSeca" class="form-select"
+						th:field="*{toleranciaSeca}">
 						<option th:value="1" th:text="Alta"></option>
 						<option th:value="2" th:text="Média"></option>
 						<option th:value="3" th:text="Baixa"></option>
 					</select>
 				</div>
 				<div class="col-md-4">
-					<label for="inputToleranciaFrio" class="form-label">Tolerância ao frio:</label>
-					<select id="inputToleranciaFrio" class="form-select" th:field="*{toleranciaFrio}">
+					<label for="inputToleranciaFrio" class="form-label">Tolerância
+						ao frio:</label> <select id="inputToleranciaFrio" class="form-select"
+						th:field="*{toleranciaFrio}">
 						<option th:value="1" th:text="Alta"></option>
 						<option th:value="2" th:text="Média"></option>
 						<option th:value="3" th:text="Baixa"></option>
 					</select>
-				</div>				
+				</div>
 				<div class="col-12">
-					<button type="submit" class="btn btn-primary" th:text="${isEdit} ? 'Atualizar' : 'Cadastrar'"></button>
+					<button type="submit" class="btn btn-primary"
+						th:text="${isEdit} ? 'Atualizar' : 'Cadastrar'"></button>
 				</div>
 			</form>
 		</div>
@@ -92,10 +118,11 @@
 				<tr th:each="forrageira : ${forrageiras}">
 					<td th:text="${forrageira.id}">1</td>
 					<td th:text="${forrageira.nomeCientifico}">nomeCientifico</td>
-					<td class="d-flex justify-content-center">
-						<a th:href="@{'/forrageiras/e/'+${forrageira.id}}" class="btn btn-warning" role="button">Alterar</a>
-						<a th:href="@{'/forrageiras/d/'+${forrageira.id}}" class="btn btn-danger ms-1" role="button">Remover</a>
-					</td>
+					<td class="d-flex justify-content-center"><a
+						th:href="@{'/forrageiras/e/'+${forrageira.id}}"
+						class="btn btn-warning" role="button">Alterar</a> <a
+						th:href="@{'/forrageiras/d/'+${forrageira.id}}"
+						class="btn btn-danger ms-1" role="button">Remover</a></td>
 				</tr>
 			</tbody>
 		</table>
