--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,13 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link th:href="@{/css/main.css}" rel="stylesheet">
 
     <title>Catálogo de Forrageiras</title>
   </head>
   <body>
-    <div class="container">
-    	<h1 layout:fragment="header"> cabeçalho falso</h1>
-    	<div layout:fragment="content">content falso</div>
+    <div layout:fragment="content">
     </div>
 
      <!-- Bootstrap Bundle with Popper -->
